Retriving data from json and keeping only needed data

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div id="main"></div>
+    <script src="script/choropleth.js"></script>
+    <script src="script/pyramid.js"></script>
+    <script src="script/treemap.js"></script>
     <script src="script/main.js"></script>
 </body>
 </html>
