--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <script src="https://d3js.org/d3.v6.min.js"></script>
 </head>
 <body>
-    <div id="main"></div>
+    <div id="choropleth"></div>
+    <div id="pyramid"></div>
+    <div id="treemap"></div>
     <script src="script/choropleth.js"></script>
     <script src="script/pyramid.js"></script>
     <script src="script/treemap.js"></script>
