--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Projet Visualisation des données</title>
+    <link rel="stylesheet" type="text/css" href="public/styles.css" />
     <script src="https://d3js.org/d3.v6.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 </head>
 <body>
     <div id="choropleth"></div>
     <div id="pyramid"></div>
-    <div id="treemap"></div>
+    <div id="treemap">
+        <div class="options">
+            <button>Zoom out</button>
+        </div>
+        <svg class="treemap"></svg>
+        <svg class="temp"></svg>
+    </div>
     <script src="script/choropleth.js"></script>
     <script src="script/pyramid.js"></script>
     <script src="script/treemap.js"></script>
