--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <title>Projet Visualisation des données</title>
     <link rel="stylesheet" type="text/css" href="public/styles.css" />
     <script src="https://d3js.org/d3.v6.min.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
 </head>
 <body>
-    <div id="choropleth"></div>
+    <div id="choropleth">
+    </div>
     <div id="pyramid"></div>
     <div id="treemap">
         <div class="options">
@@ -17,6 +20,7 @@
         <svg class="treemap"></svg>
         <svg class="temp"></svg>
     </div>
+    <script src="script/const.js"></script>
     <script src="script/choropleth.js"></script>
     <script src="script/pyramid.js"></script>
     <script src="script/treemap.js"></script>
