--- a/index.html
+++ b/index.html
@@ -8,15 +8,32 @@
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
+    <script src="https://unpkg.com/d3-simple-slider"></script>
+
+    <link
+            rel="stylesheet"
+            href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+            integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+            crossorigin="anonymous"
+    />
 </head>
 <body>
-    <div id="choropleth">
+    <div class="row">
+        <div class="col-1 align-items-center">
+            <div class="col-sm-2"><p id="value-time"></p></div>
+            <div class="col-sm"><div id="slider-time"></div></div>
+        </div>
+        <div class="col-10" id="choropleth">
+        </div>
+        <div class="col-1" id="legend">
+            <p>LOL</p>
+        </div>
     </div>
     <div id="pyramid"></div>
     <div id="treemap">
-        <div class="options">
+        <!-- <div class="options">
             <button>Zoom out</button>
-        </div>
+        </div> -->
         <svg class="treemap"></svg>
         <svg class="temp"></svg>
     </div>
