Update colors, filtering, treemap details

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </div>
     <div id="pyramid"></div>
     <div id="treemap">
-        <!-- <div class="options">
+        <div class="options">
             <button>Zoom out</button>
-        </div> -->
+        </div>
         <svg class="treemap"></svg>
         <svg class="temp"></svg>
     </div>
