--- a/index.html
+++ b/index.html
@@ -25,22 +25,29 @@
         </div>
         <div class="col-10" id="choropleth">
         </div>
-        <div class="col-1" id="legend">
-            <p>LOL</p>
+        <div class="col-1">
+            <div class="row">
+                <div class="col-12" id="legend"></div>
+            </div>
+            <div class="row">
+                <div class="col-12" id="piechart"></div>
+            </div>
         </div>
     </div>
-    <div id="pyramid"></div>
-    <div id="treemap">
-        <div class="options">
-            <button>Zoom out</button>
-        </div>
-        <svg class="treemap"></svg>
-        <svg class="temp"></svg>
-    </div>
+<!--    <div id="pyramid"></div>-->
+<!--    <div id="treemap">-->
+<!--        <div class="options">-->
+<!--            <button>Zoom out</button>-->
+<!--        </div>-->
+<!--        <svg class="treemap"></svg>-->
+<!--        <svg class="temp"></svg>-->
+<!--    </div>-->
+
     <script src="script/const.js"></script>
     <script src="script/choropleth.js"></script>
     <script src="script/pyramid.js"></script>
     <script src="script/treemap.js"></script>
     <script src="script/main.js"></script>
+
 </body>
 </html>
