Update piechart in choropleth

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <div class="col-12" id="legend"></div>
             </div>
             <div class="row">
+                <p id="piechartlegend"></p>
                 <div class="col-12" id="piechart"></div>
             </div>
         </div>
