--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div id="divTreemap" style="display: none">
         <div id="treemap">
             <div class="options" style="float: right">
-                <button>Zoom out</button>
+                <button id="zoomOut">Zoom out</button>
             </div>
             <svg class="treemap"></svg>
             <svg class="temp"></svg>
